@@ -8,3 +8,4 @@ Computer;Computer;Personal Computer System
 Fan;Fan;Airflow Producer
 Speaker;Speaker;Audio Speaker
 Generic;Generic;Generic On/Off switch
+Fireplace;Fireplace;Fireplace
